Closed Bug 966626 Opened 10 years ago Closed 10 years ago

CommandExecuteHandler.exe - Application Error

Categories

(Firefox :: Shell Integration, defect)

28 Branch
x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

VERIFIED FIXED
Firefox 29
Tracking Status
firefox28 --- verified
firefox29 --- verified
b2g-v1.3 --- fixed

People

(Reporter: streetwolf52, Assigned: jimm)

References

Details

(Keywords: regression, Whiteboard: [metro] [beta28] p=1)

Attachments

(3 files)

User Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:29.0) Gecko/20100101 Firefox/29.0 (Beta/Release)
Build ID: 20140131171045

Steps to reproduce:

Open up Fx29 by clicking on an external link from another program.


Actual results:

Event Log:

Faulting application name: CommandExecuteHandler.exe, version: 29.0.0.5142, time stamp: 0x52eab06b
Faulting module name: SHELL32.dll, version: 6.3.9600.16474, time stamp: 0x52902a5b
Exception code: 0xc0000005
Fault offset: 0x001c6322
Faulting process id: 0x10d8
Faulting application start time: 0x01cf1ed7b44a29e6
Faulting application path: C:\Users\Gary\My Programs\firefox\CommandExecuteHandler.exe
Faulting module path: C:\Windows\SYSTEM32\SHELL32.dll
Report Id: f28bde87-8aca-11e3-83f3-c86000a0a026
Faulting package full name: 
Faulting package-relative application ID:



Expected results:

No error when Fx29 is opened via an external link.
Component: Untriaged → General
Keywords: regression
http://hg.mozilla.org/integration/mozilla-inbound/rev/c0ee7e389205  - Good
http://hg.mozilla.org/integration/mozilla-inbound/rev/a41fdfce8810  - Bad

Even though I get this error and the one that Nightly needs to be closed replying yes keeps me in Nightly with no Nightly crash.
Blocks: 950241
A few question - 

1) do you have the inbound build set as the default system browser?
2) if it's the default, which front end do you have selected? (desktop/metro)
3) Do you have other revs of firefox installed on the system?

Would you mind posting the log of the ceh doing its thing on this system?

https://wiki.mozilla.org/Firefox/Windows_8_Integration#Diagnosing_Command_Execute_Handler_Issues
Whiteboard: [metro] [triage]
Component: General → Shell Integration
Version: 29 Branch → 28 Branch
(In reply to Jim Mathies [:jimm] from comment #2)
> A few question - 
> 
> 1) do you have the inbound build set as the default system browser?
> 2) if it's the default, which front end do you have selected? (desktop/metro)
> 3) Do you have other revs of firefox installed on the system?
> 
> Would you mind posting the log of the ceh doing its thing on this system?
> 
> https://wiki.mozilla.org/Firefox/
> Windows_8_Integration#Diagnosing_Command_Execute_Handler_Issues

1. I use inbound as my default browser.
2. Front end is desktop
3. No other revs on my system.

Would you mind posting the log of the ceh doing its thing on this system?  What and where is this?  Remember that Fx doesn't actually crash AFAICT.
Here's the log:

[1976] SHIMVIEW: ShimInfo(Complete) 
[4076] SetSelection target: http://www.santanderbank.com/
[4076] 
[4076] Initialize(open)
[4076] 
[4076] IExecuteCommandApplicationHostEnvironment::GetValue()
[4076] 
[4076] Previous AHE: 0
[4076] 
[4076] Execute()
[4076] 
[4076] Previous AHE: 0
[4076] 
[4076] Desktop Launch: verb:'open' exe:'C:\Users\Gary\My Programs\firefox\firefox.exe' params:'-url "http://www.santanderbank.com/"'
[4076] 
[4076] Desktop browser process id: 3820
[4076]
(In reply to Gary [:streetwolf] from comment #4)
> Here's the log:
> 
> [1976] SHIMVIEW: ShimInfo(Complete) 
> [4076] SetSelection target: http://www.santanderbank.com/
> [4076] 
> [4076] Initialize(open)
> [4076] 
> [4076] IExecuteCommandApplicationHostEnvironment::GetValue()
> [4076] 
> [4076] Previous AHE: 0
> [4076] 
> [4076] Execute()
> [4076] 
> [4076] Previous AHE: 0
> [4076] 
> [4076] Desktop Launch: verb:'open' exe:'C:\Users\Gary\My
> Programs\firefox\firefox.exe' params:'-url "http://www.santanderbank.com/"'
> [4076] 
> [4076] Desktop browser process id: 3820
> [4076]

After which you get a dialog about the crash?
Ok, I've managed to reproduce the event in the event viewer.
Assignee: nobody → jmathies
Attached image Capture1.PNG
Pressing OK for the first error message, then close for the second one doesn't end Fx.  It continues as if nothing happened.
Quicker shutdown of the ceh seems to have triggered this. When the dtor of CExecuteCommandVerb gets call, the shell item array has already been destroyed and the Release call exception faults. Releasing before the ceh ref count drops to zero solves the issue.
Attachment #8369073 - Flags: review?(netzen)
Whiteboard: [metro] [triage] → [metro] [beta28]
Whiteboard: [metro] [beta28] → [metro] [beta28] p=1
Attachment #8369073 - Flags: review?(netzen) → review+
Thanks for the quick turn around.

Note, I've cancelled the pending 02-01 Windows Nightly so our nightly users don't run into this. I'll land this fix directly on mc.
https://hg.mozilla.org/mozilla-central/rev/d09f9a9f81ae
Status: UNCONFIRMED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
BTW - thanks for testing Gary!
(In reply to Jim Mathies [:jimm] from comment #13)
> BTW - thanks for testing Gary!

My pleasure.
Target Milestone: --- → Firefox 29
Not seeing any problems with the newest mc nightly I triggered on this push.
Keywords: verifyme
Blocks: 966324
No longer blocks: 966324
I couldn't reproduce this issue with the Nightly from 2014-01-31 on Win 8.1 64-bit: after setting Nightly as the default browser and opening a link from Skype, I don't get the error you mention.

Any thoughts/suggestions?
Flags: needinfo?(garyshap)
Problem has been fixed.
Flags: needinfo?(garyshap)
I've also tried to reproduce this issue with the Nightly from 2014-02-01, but still without any success.

Gary, could you please check this has been fixed with:

1) latest Beta (28 beta 2): ftp://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/28.0b2-candidates
2) latest Aurora: ftp://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/latest-mozilla-aurora/
3) latest Nightly: ftp://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/latest-mozilla-central/
Flags: needinfo?(garyshap)
The Nightly from 2014-02-01 shouldn't have the error since it first appeared on inbound on that day and the fix landed on m-c right away.  So the original bad patch wasn't on Nightly on that day which is why you can't reproduce it.

I suspect Beta and Aurora either don't have the original bad patch or have the fixed one.  In either case you won't get the error.
Flags: needinfo?(garyshap)
Marking this verified fixed, based on comment 19 and comment 21 and on the fact that I wasn't able to reproduce this issue with neither the Nightly from 2014-01-31 nor the Nightly from 2014-02-01, as mentioned in comment 18 and comment 20.

Thanks Gary for your help.
Status: RESOLVED → VERIFIED
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: