Bug 966626 - Fix for browser launch error dialog on Win8 caused by CommandExecuteHandler changes in bug 950241: release the IShellItemArray Explorer hands us prior to derefing the ceh. r=bbondy, a=lsblakk, ba=jimm